--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,12 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+# DINGO API
+API_STANDARDS_TREE=x
+API_SUBTYPE=impulse_api
+#API_PREFIX=api
+API_DOMAIN=localhost:8000
+API_VERSION=v1
+API_NAME="Impulse API"
+API_DEBUG=true
