--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.3|^8.0",
         "dingo/api": "^3.0.0",
         "flipbox/lumen-generator": "^8.2",
+        "fruitcake/laravel-cors": "^2.0",
         "laravel/lumen-framework": "^8.0",
         "rorecek/laravel-ulid": "^2.0",
         "spatie/laravel-permission": "^4.0",
