--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "flipbox/lumen-generator": "^8.2",
         "fruitcake/laravel-cors": "^2.0",
         "laravel/lumen-framework": "^8.0",
+        "laravelista/lumen-vendor-publish": "^8.0",
+        "maatwebsite/excel": "^3.1",
         "rorecek/laravel-ulid": "^2.0",
         "spatie/laravel-permission": "^4.0",
         "tymon/jwt-auth": "^1.0"
